--- a/src/qt/res/css/crownium.css
+++ b/src/qt/res/css/crownium.css
@@ -1,6 +1,6 @@
 WalletFrame {
-border-image: url(':/images/crownium/drkblue_walletFrame_bg') 0 0 0 0 stretch stretch;
-/* background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #222222, stop: .1 #EEEEEE, stop: .9 #EEEEEE, stop: 1 #222222); */
+/* border-image: url(':/images/crownium/drkblue_walletFrame_bg') 0 0 0 0 stretch stretch; */
+background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #222222, stop: .1 #EEEEEE, stop: .9 #EEEEEE, stop: 1 #222222); 
 border-top:0px solid #000;
 margin:0;
 padding:0;
@@ -11,8 +11,8 @@ background-color:#ffffff;
 }
 
 .QFrame {
-background-color:transparent;
-border:0px solid #fff;
+background-color: #fff;
+border:2px solid #666666;
 }
 
 QMenuBar {
