--- a/src/qt/res/css/crownium.css
+++ b/src/qt/res/css/crownium.css
@@ -1,6 +1,6 @@
 WalletFrame {
 /* border-image: url(':/images/crownium/drkblue_walletFrame_bg') 0 0 0 0 stretch stretch; */
-background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #222222, stop: .1 #EEEEEE, stop: .9 #EEEEEE, stop: 1 #222222); 
+background-color: #f0f0f0 ; 
 border-top:0px solid #000;
 margin:0;
 padding:0;
@@ -11,8 +11,8 @@ background-color:#ffffff;
 }
 
 .QFrame {
-background-color: #fff;
-border:2px solid #666666;
+background-color: transparent;
+border:0px solid #666666;
 }
 
 QMenuBar {
@@ -802,7 +802,7 @@ min-height:30px;
 QWidget .QFrame#frame .QLabel#label_5 { /* Wallet Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:transparent;
+background-color:#fff;
 color:transparent;
 margin-right:5px;
 padding-right:5px;
